<resources>
    <string name="app_name">Warehouse Management System</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_customer_menu">CustomerMenu</string>

    <!-- String values for Shopping Cart -->
    <string name="price">Price</string>

    <!-- String values for Add Item -->
    <string name="productPrice">ProductPrice</string>
    <string name="productDescription">ProductDescription</string>
    <string name="productID">ProductID</string>

    <!-- String values for Confirmation Fragment -->
    <string name="subtotal">SubTotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>

    <!-- String values for Checkout -->
    <string name="title_activity_checkout">Checkout</string>
    <string name="tab_text_1">Shipping</string>
    <string name="tab_text_2">Payment</string>
    <string name="tab_text_3">Confirmation</string>

    <!-- String values for Report Window -->
    <string name="report_title"><u>Report Bugs/Issue</u></string>
    <style name="Animation">
        <item name="android:windowEnterAnimation">@anim/nav_default_pop_enter_anim</item>
        <item name="android:windowExitAnimation">@anim/nav_default_pop_exit_anim</item>
    </style>

    <!-- String values for Modify Popup Window in Shopping Cart -->
    <string name="mod_name">Name</string>
    <string name="mod_price">Price</string>
    <string name="mod_real_quantity">Quantity</string>

</resources>