<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="270dp"
    android:id="@+id/mod_popup_layout"
    tools:context=".ShoppingCart.ShoppingCart">

    <View
        android:id="@+id/report_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/report_box" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/mod_shopping_cart_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod_name"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/mod_shoppping_cart_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod_price"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/mod_real_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod_real_quantity"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/mod_plus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_baseline_add" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="12dp"
                android:hint="Quantity"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mod_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="0" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/mod_minus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_baseline_minus" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/mod_save_button"
                android:layout_width="110dp"
                android:layout_height="70dp"
                android:text="Save"
                android:layout_alignParentLeft="true"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/mod_delete_button"
                android:layout_width="110dp"
                android:layout_height="70dp"
                android:text="Delete"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>