<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:baselineAligned="true"
    android:orientation="vertical"
    tools:context=".ShoppingCart.AddItem">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/profile_appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:liftOnScroll="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/add_item_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

<!--        <ImageView-->
<!--            android:id="@+id/back_to_menu"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:clickable="true"-->
<!--            android:onClick="backToMenu"-->
<!--            android:src="@drawable/profile_exit_foreground" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/edit_profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Shopping Cart"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="Add Item"
        android:textColor="#303F9F"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!--Product Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_item_product_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <AutoCompleteTextView
            android:id="@+id/add_item_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="Product Name"
            android:padding="16.5dp"
            android:singleLine="true"
            android:completionThreshold="1"/>

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/add_item_product_name_edit_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:inputType="text"-->
<!--            android:singleLine="true" />-->

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="73dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="150dp"
            android:layout_height="66dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="12dp"
            android:hint="Quantity"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_item_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:singleLine="true"
                android:text="0" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/image_minus"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="50dp"
            android:onClick="decreaseQuantity"
            android:src="@drawable/ic_baseline_minus" />

        <ImageView
            android:id="@+id/image_plus"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/image_minus"
            android:onClick="increaseQuantity"
            android:src="@drawable/ic_baseline_add" />

    </RelativeLayout>

    <!--Product Price-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_item_product_price_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Product Price"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_item_product_price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/productPrice"
            android:enabled="false"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Product ID-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_item_product_id_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Product ID"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_item_product_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/productID"
            android:enabled="false"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Product Description-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_item_product_description_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Product Description"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_item_product_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/productDescription"
            android:enabled="false"
            android:singleLine="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Add to Shopping Cart"
        android:textColor="@color/colorWhite" />

</LinearLayout>